--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,11 @@ dependencies:
   flutter_bloc: ^7.3.0
   dio: ^4.0.0
   equatable: ^2.0.3
+  freezed_annotation: ^0.15.0
 
 dev_dependencies:
+  build_runner:
+  freezed: ^0.14.5
   flutter_test:
     sdk: flutter
 
